feat: Add Badge Management and refactor codes

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -423,3 +423,8 @@ a:focus {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+/* Hide scrollbar */
+.no-scrollbar {
+  scrollbar-width: none;
+}
